# api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README-docker.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
.ai/: composer-notes.md  implementation-plan.md  prd.md  project-structure.md  python-environment.md  schema-design.md  tech-stack.md
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  database.py  main.py
app/components/: __init__.py  authentication.py  health.py  location_proofs.py
app/models/: __init__.py  address.py  base.py  chain.py  location_proof.py  sync_state.py  user.py
app/schemas/: __init__.py  address.py  base.py  chain.py  location_proof.py  user.py
app/services/: __init__.py  eas_integration.py  scheduler.py
config/: EAS-config.json
scripts/: init-db.sql  reset-db.sh  run-tests.sh  seed_chains.py  seed_db.sh  seed_location_proofs.py  start.sh  validate_db.py
tests/: conftest.py
tests/integration/: test_eas_scheduler_integration.py  test_models.py
tests/unit/: test_advanced_queries.py  test_eas_integration.py  test_error_handling.py  test_health.py  test_location_proofs.py  test_metadata_links.py  test_scheduler.py
